# denscord

./: .env copy  CODE_OF_CONDUCT.md  Dockerfile  README.md  database_design.txt  docker-compose.yml  pyproject.toml  requests.json  sample.env
.github/workflows/: python-app.yml  python-test.yml
api/: router.py  ws_notifier.py
api/models/: channel.py  guild.py  invite_request.py  member.py  message.py  user.py
api/private/: __init__.py  guild.py
api/private/guild/: channel.py  guild.py  message.py
api/private/user/: profile.py  social.py
api/public/: __init__.py  authorisation.py  user.py
api/schemas/: user.py
app/: main.py
app/core/: config.py  database.py  fastjwt.py  password.py
tests/: conftest.py  test_async.py
tests/routes/: test_auth.py  test_channel.py  test_guild.py  test_index.py  test_profile.py
