[tool.poetry]
name = "denscord"
version = "0.1.0"
description = "A Discord clone"
authors = ["denver-code <csigorek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.10.8"}
python-dotenv = "^1.0.0"
beanie = "^1.19.2"
bcrypt = "^4.0.1"
pyjwt = "^2.7.0"
websockets = "^11.0.3"
starlette = "^0.27.0"
libgravatar = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
